--- a/assets/css/food-calculator.css
+++ b/assets/css/food-calculator.css
@@ -34,6 +34,47 @@
     text-align: center;
 }
 
+
+.cart-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #f9f9f9;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .cart-box button {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    padding: 8px 16px;
+    border-radius: 5px;
+    font-size: 20px;
+    margin: 0 10px;
+  }
+  
+  .cart-box button:hover {
+    background-color: #0056b3;
+  }
+  
+  #quantity {
+    font-size: 16px;
+    width: 50px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  #total_price {
+    font-size: 16px;
+    color: #333;
+    font-weight: bold;
+  }
+  
+
 input[type="checkbox"] {
     display: none;
 }
@@ -44,7 +85,7 @@ input[type="checkbox"] {
     margin: 20px;
     padding: 0;
     width: 250px;
-    height: 150px;
+    height: 120px;
     align-self: center;
 }
 
@@ -89,7 +130,7 @@ input[type="radio"] {
     display: inline-block;
     position: relative;
     margin: 10px;
-    width: 200px;
+    width: 180px;
 }
 
 .radio-label {
@@ -112,7 +153,6 @@ input[type="radio"] {
 }
 
 .price {
-    color: #00f;
     margin-bottom: 8%;
 }
 
