--- a/assets/css/food-calculator.css
+++ b/assets/css/food-calculator.css
@@ -46,7 +46,7 @@
   }
   
   .cart-box {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: space-between;
     background-color: #f9f9f9;
