--- a/assets/css/food-calculator.css
+++ b/assets/css/food-calculator.css
@@ -2,25 +2,38 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid #00838d;
     border-radius: 10px;
     padding: 20px;
     background-color: #f9f9f9;
     margin: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
+
+  .icecream-info:hover{
+    transform: translateY(-4px);
+  }
   
   .icecream-image img {
     max-width: 100%;
     height: auto;
     border-radius: 50%;
+    transition: transform 0.3s;
+  }
+
+  .icecream-image :hover {
+    transform: rotate(360deg);
+    /* transform: scale(1.2); */
   }
   
   .icecream-name h3 {
     font-size: 24px;
     margin: 10px 0;
-    color: #00838d;
+    color: #36454F;
     text-align: center;
+  }
+
+  .icecream-name :hover {
+    color: #013220;
   }
   
   .icecream-price {
@@ -37,11 +50,10 @@
   }
   
   #total_price {
-    border: 1px solid #00838d;
     width: 70px;
     padding: 10px;
     text-align: center;
-    color: #00838d;
+    color: #ff5722;
     font-weight: bold;
   }
   
@@ -51,12 +63,11 @@
     justify-content: space-between;
     background-color: #f9f9f9;
     padding: 10px;
-    border: 2px solid #00838d;
     border-radius: 10px;
   }
   
   .cart-box button {
-    background-color: #00838d;
+    background-color: gray;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -67,24 +78,16 @@
   }
   
   .cart-box button:hover {
-    background-color: #0056b3;
+    background-color: #013220;
   }
   
   #quantity {
     font-size: 16px;
     width: 50px;
     text-align: center;
-    border: 2px solid #00838d;
+    border: 2px solid darkslategray;
     border-radius: 5px;
-  }
-  
-  #total_price {
-    font-size: 16px;
-    color: #00838d;
-    font-weight: bold;
-  }
-  
-  
+  }  
 
 input[type="checkbox"] {
     display: none;
@@ -115,7 +118,7 @@ input[type="checkbox"] {
 }
 
 .checkbox-container :hover{
-    background-color: antiquewhite;
+    background-color: #c0c0c0;
 }
 
 .checkbox-image {
@@ -213,6 +216,6 @@ input[type="radio"]:checked+.radio-label {
 
 input[type="radio"]:checked+.price-label {
     border-radius: 10px;
-    box-shadow: 0 8px 6px -6px rgb(199, 1, 248);
+    box-shadow: 0 8px 6px -6px black;
     
 }
